--- a/partials/_fonts.scss
+++ b/partials/_fonts.scss
@@ -9,11 +9,13 @@
         font-family: "Silkscreen", sans-serif;
         font-style: normal;
         font-weight: 400; 
+        margin: 0;
     }
     &.silkscreen-bold {
         font-family: "Silkscreen", sans-serif;
         font-weight: 700;
         font-style: normal;
+        margin: 0;
     }
 }
 
@@ -29,6 +31,7 @@
     font-family: "VT323", monospace;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
 }
 
 //DotGothic16: CSS class
@@ -72,6 +75,7 @@
     font-style: normal;
     font-variation-settings:
         "wdth" 100;
+    
 }
 
 
