--- a/sections/_about.scss
+++ b/sections/_about.scss
@@ -8,5 +8,6 @@
 #about {
     padding: 5%;
     background-color: colors.$beige;
-    height: auto;
+    height: fit-content;
+    
 }
