--- a/sections/_projects.scss
+++ b/sections/_projects.scss
@@ -7,7 +7,16 @@
 
 #projects {
     padding: 5%;
-    height: auto;
+    height: fit-content;
 
     
+}
+
+.project-card {
+    // border: 2px solid red;
+    padding: 20px;
+    gap: 10px;
+    @include mixins.flex-center(row);
+    flex-wrap: wrap;
+
 }
