--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@
 
 *{
     box-sizing: border-box;
+    
 }
 
 html, body{
@@ -26,7 +27,12 @@ html, body{
 
 
 h2,h1 {
-    margin: 15px;
+    margin: 20px;
     text-align: center;
     color: colors.$black-olive;
 }
+
+img, button{
+    border-radius: 20px;
+}
+
